[gd_scene load_steps=2 format=3 uid="uid://c6w7spo1tgxs5"]

[ext_resource type="Script" path="res://control.gd" id="1_00lmq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_00lmq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="View Score" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "View Score"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Delete Score" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Delete Score"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 135.0
offset_right = 61.0
offset_bottom = 158.0
text = "Score: 0"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 901.0
offset_right = 1092.0
offset_bottom = 237.0

[node name="highscore1" type="Label" parent="HBoxContainer"]
layout_mode = 2
justification_flags = 171

[node name="highscore2" type="Label" parent="HBoxContainer"]
layout_mode = 2
horizontal_alignment = 2
vertical_alignment = 1
justification_flags = 171

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/View Score" to="." method="_on_view_score_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Delete Score" to="." method="_on_delete_score_pressed"]
